249 VFI dev tooling seeder (#264)